# application.ai.vpu-use-cases

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/models/: CMakeLists.txt
source/common/monitors/: CMakeLists.txt
source/common/nodes/: CMakeLists.txt
source/common/nodes/include/: DisplayNode.hpp  FrameReaderNode.hpp  OdInferNode.hpp
source/common/nodes/src/: DisplayNode.cpp  MidasInferNode.cpp  OdInferNode.cpp
source/common/pipelines/: CMakeLists.txt
source/common/pipelines/include/pipelines/: async_pipeline.h
source/common/pipelines/src/: async_pipeline.cpp
source/common/utils/: CMakeLists.txt
source/common/utils/include/utils/: ocv_common.hpp
source/dataPathTestWithMeta/: CMakeLists.txt  dataPathTestWithMeta.cpp  dataPathTestWithMeta.hpp
source/midas_demo/: CMakeLists.txt  DisplayNode.cpp  DisplayNode.hpp  FrameReaderNode.cpp  FrameReaderNode.hpp  MidasInferNode.cpp  MidasInferNode.hpp  OdInferNode.cpp  Vis3DNode.cpp  Vis3DNode.hpp  common.hpp  main.cpp
source/object_detection_demo/: CMakeLists.txt
source/object_detection_demo/multithreading/: CMakeLists.txt  DisplayNode.cpp  DisplayNode.hpp  FrameReaderNode.cpp  FrameReaderNode.hpp  OdInferNode.cpp  OdInferNode.hpp  common.hpp  main.cpp
